Second JSON parse attempt